@@ -185,9 +185,9 @@ public class CalciteRexNodeVisitor extends AbstractNodeVisitor<RexNode, CalciteP
       if (parts.size() == 1) {
         // 1.1 Handle the case of `id = cid`
         try {
-          return context.relBuilder.field(2, 0, parts.getFirst());
+          return context.relBuilder.field(2, 0, parts.get(0));
         } catch (IllegalArgumentException ee) {
-          return context.relBuilder.field(2, 1, parts.getFirst());
+          return context.relBuilder.field(2, 1, parts.get(0));
         }
       } else if (parts.size() == 2) {
         // 1.2 Handle the case of `t1.id = t2.id` or `alias1.id = alias2.id`
@@ -301,7 +301,7 @@ public class CalciteRexNodeVisitor extends AbstractNodeVisitor<RexNode, CalciteP
 
   @Override
   public RexNode visitInSubquery(InSubquery node, CalcitePlanContext context) {
-    List<RexNode> nodes = node.getChild().stream().map(child -> analyze(child, context)).toList();
+    List<RexNode> nodes = node.getChild().stream().map(child -> analyze(child, context)).collect(Collectors.toList());
     UnresolvedPlan subquery = node.getQuery();
     RelNode subqueryRel = resolveSubqueryPlan(subquery, context);
     try {
